[package]
name = "email-missing-students"
version = "0.1.0"
authors = ["Waldemar <waldemar.schwan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = { version = "1.0", features = ["derive"] }
mailstrom = "0.7.0"
structopt = "0.3"
tinytemplate = "1.1"
